[project]
name = "cpp-graph"
version = "0.1.0"
description = "Add your description here"
readme = {file = "README.org", content-type = "text/org"}
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "clang==14",
    "click>=8.2.1",
    "networkx>=3.5",
    "pygraphviz>=1.14",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
